--- a/app/src/main/res/layout/holder_viewpager_carousel_item.xml
+++ b/app/src/main/res/layout/holder_viewpager_carousel_item.xml
@@ -25,6 +25,8 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:orientation="horizontal"
+            android:clipToPadding="false"
+            android:paddingBottom="@dimen/dimen_20"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
